<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ste.parkcar.Utility_Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="207dp"
                    android:layout_height="119dp"
                    android:textStyle="bold|italic"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:id="@+id/textView14"
                    android:text="@string/utility"
                    android:textColor="#0015ff"
                    android:clickable="true" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/scrollView4" >

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:layout_width="207dp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold|italic"
                            android:id="@+id/textView15distanzadaPercorrere"
                            android:text="@string/distanzadaPercorrere"
                            android:textSize="20dp"
                            android:clickable="true" />

                        <TextView
                            android:layout_width="207dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView16litridicarburanteconsumati"
                            android:text="@string/litridicarburanteconsumati"
                            android:textSize="20dp"
                            android:textStyle="bold|italic"
                            android:clickable="true" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold|italic"
                            android:textSize="20dp"
                            android:clickable="true"
                            android:text="@string/preventivocosti"
                            android:id="@+id/textView17preventivocosti" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

            <Space
                android:layout_width="25px"
                android:layout_height="match_parent" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|right" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:src="@drawable/p6"
                        android:id="@+id/imageView3" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/TAPmenu"
                    android:textStyle="bold|italic"
                    android:id="@+id/textView18" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:layout_gravity="bottom" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/schermataPrincipale"
                android:id="@+id/button5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/indietro"
                android:id="@+id/button6" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
